--- a/.github/workflows/generate-pdf.yml
+++ b/.github/workflows/generate-pdf.yml
@@ -69,11 +69,31 @@ jobs:
           
           # Remove the "_temp" suffix to restore original filename
           name="${filename%_temp*}"
+          header_file="temp/${name}_header.tex"
+          number_sections=""
+
+          if grep -q '^section_prefix:' "docs/${name}.md"; then
+            number_sections="--number-sections"
+            cat > "$header_file" <<'EOF'
+\usepackage{enumitem}
+\renewcommand{\thesection}{\S\arabic{section}}
+\renewcommand{\thesubsection}{\arabic{section}.\arabic{subsection}}
+\renewcommand{\thesubsubsection}{\arabic{section}.\arabic{subsection}.\arabic{subsubsection}}
+\makeatletter
+\renewcommand{\@seccntformat}[1]{\ifcsname the#1\endcsname\csname the#1\endcsname\hspace{0.4em}\fi}
+\renewcommand{\numberline}[1]{#1\hspace{0.6em}}
+\makeatother
+EOF
+          else
+            echo "\\usepackage{enumitem}" > "$header_file"
+          fi
+
           pandoc "$file" -o "assets/pdf/${name}.pdf" \
+          $number_sections \
           --toc-depth=2 \
           --pdf-engine=xelatex \
           -V geometry:margin=1in \
-          -V header-includes="\\usepackage{enumitem}" \
+          --include-in-header="$header_file" \
           --resource-path=./docs
 
         done
