Updated Files for automatic hmtl/pdf generation and local testing

--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,7 @@ description: "Spielordnung des BTFV"
 theme: jekyll-theme-minimal
 plugins:
   - jekyll-toc
+  - jekyll-relative-links
+
+relative_links:
+  enabled: true
