--- a/.github/workflows/generate-pdf.yml
+++ b/.github/workflows/generate-pdf.yml
@@ -74,14 +74,14 @@ jobs:
             if grep -q '^section_prefix:' "docs/${name}.md"; then
               number_sections="--number-sections"
               printf '%s\n' \
-                '\\usepackage{enumitem}' \
-                '\\renewcommand{\\thesection}{\\S\\arabic{section}}' \
-                '\\renewcommand{\\thesubsection}{\\arabic{section}.\\arabic{subsection}}' \
-                '\\renewcommand{\\thesubsubsection}{\\arabic{section}.\\arabic{subsection}.\\arabic{subsubsection}}' \
-                '\\makeatletter' \
-                '\\renewcommand{\\@seccntformat}[1]{\\ifcsname the#1\\endcsname\\csname the#1\\endcsname\\hspace{0.4em}\\fi}' \
-                '\\renewcommand{\\numberline}[1]{#1\\hspace{0.6em}}' \
-                '\\makeatother' \
+                "\\usepackage{enumitem}" \
+                "\\renewcommand{\\thesection}{\\S\\arabic{section}}" \
+                "\\renewcommand{\\thesubsection}{\\arabic{section}.\\arabic{subsection}}" \
+                "\\renewcommand{\\thesubsubsection}{\\arabic{section}.\\arabic{subsection}.\\arabic{subsubsection}}" \
+                "\\makeatletter" \
+                "\\renewcommand{\\@seccntformat}[1]{\\ifcsname the#1\\endcsname\\csname the#1\\endcsname\\hspace{0.4em}\\fi}" \
+                "\\renewcommand{\\numberline}[1]{#1\\hspace{0.6em}}" \
+                "\\makeatother" \
                 > "$header_file"
             else
               echo "\\usepackage{enumitem}" > "$header_file"
