Add DTFB template for web and PDF

--- a/.github/workflows/generate-pdf.yml
+++ b/.github/workflows/generate-pdf.yml
@@ -22,13 +22,25 @@ jobs:
       - name: Prepare Markdown for PDF
         run: |
           mkdir -p temp
+          CURRENT_MONTH=${LAST_UPDATED_DATE:5:2}
+          CURRENT_YEAR=${LAST_UPDATED_DATE:0:4}
+          MONTH_NAMES=(Januar Februar März April Mai Juni Juli August September Oktober November Dezember)
+          MONTH_INDEX=$((10#$CURRENT_MONTH - 1))
+          CURRENT_MONTH_YEAR="${MONTH_NAMES[$MONTH_INDEX]} $CURRENT_YEAR"
           for file in docs/*.md; do
             filename=$(basename -- "$file")
             name="${filename%.*}" # Extract file name without extension
             cp "$file" "temp/${name}_temp.md"
             
             # Replace date placeholder in Markdown content
-            sed -i "s/{{ site.time | date: \"%d-%m-%Y\" }}/$LAST_UPDATED_DATE/g" "temp/${name}_temp.md"
+            if grep -qi '^template:[[:space:]]*dtfb' "$file"; then
+              sed -i "s/{{ site.time | date: \"%d-%m-%Y\" }}/$CURRENT_MONTH_YEAR/g" "temp/${name}_temp.md"
+              sed -i "s/date: {{ site.time | date: \"%d-%m-%Y\" }}/date: $CURRENT_MONTH_YEAR/g" "temp/${name}_temp.md"
+              sed -i "s/^date: .*/date: $CURRENT_MONTH_YEAR/" "temp/${name}_temp.md"
+            else
+              sed -i "s/{{ site.time | date: \"%d-%m-%Y\" }}/$LAST_UPDATED_DATE/g" "temp/${name}_temp.md"
+              sed -i "s/date: {{ site.time | date: \"%d-%m-%Y\" }}/date: $LAST_UPDATED_DATE/g" "temp/${name}_temp.md"
+            fi
             
             # Replace TOC syntax for LaTeX
             sed -i '/^\* TOC$/{N;s|.*\n.*$|\\clearpage\\renewcommand{\\contentsname}{Inhaltsverzeichnis}\n\\tableofcontents\n\\clearpage|}' "temp/${name}_temp.md"
@@ -70,6 +82,39 @@ jobs:
             name="${filename%_temp*}"
             header_file="temp/${name}_header.tex"
             number_sections=""
+            template_name=""
+            template_dir=""
+
+            template_name=$(python3 - "docs/${name}.md" <<'PY'
+import sys
+from pathlib import Path
+
+path = Path(sys.argv[1])
+text = path.read_text(encoding="utf-8")
+lines = text.splitlines()
+if not lines or lines[0].strip() != "---":
+    sys.exit(0)
+try:
+    fm_end = lines.index("---", 1)
+except ValueError:
+    sys.exit(0)
+for line in lines[1:fm_end]:
+    if line.lower().startswith("template:"):
+        value = line.split(":", 1)[1].strip().strip("'\"")
+        print(value.lower())
+        break
+PY
+)
+
+            if [ -z "$template_name" ]; then
+              template_name="default"
+            fi
+
+            if [ -d "templates/$template_name" ]; then
+              template_dir="templates/$template_name"
+            else
+              template_name="default"
+            fi
 
             if grep -q '^section_prefix:' "docs/${name}.md"; then
               number_sections="--number-sections"
@@ -87,13 +132,17 @@ jobs:
               echo "\\usepackage{enumitem}" > "$header_file"
             fi
 
+            if [ -n "$template_dir" ] && [ -f "$template_dir/pdf-header.tex" ]; then
+              cat "$template_dir/pdf-header.tex" >> "$header_file"
+            fi
+
             pandoc "$file" -o "assets/pdf/${name}.pdf" \
             $number_sections \
             --toc-depth=2 \
             --pdf-engine=xelatex \
             -V geometry:margin=1in \
             --include-in-header="$header_file" \
-            --resource-path=./docs
+            --resource-path=.:./docs:./templates:./templates/$template_name
 
           done
 
