--- a/.github/workflows/generate-pdf.yml
+++ b/.github/workflows/generate-pdf.yml
@@ -22,21 +22,22 @@ jobs:
       - name: Prepare Markdown for PDF
         run: |
           mkdir -p temp
-          CURRENT_MONTH=${LAST_UPDATED_DATE:5:2}
-          CURRENT_YEAR=${LAST_UPDATED_DATE:0:4}
-          MONTH_NAMES=(Januar Februar März April Mai Juni Juli August September Oktober November Dezember)
-          MONTH_INDEX=$((10#$CURRENT_MONTH - 1))
-          CURRENT_MONTH_YEAR="${MONTH_NAMES[$MONTH_INDEX]} $CURRENT_YEAR"
+          LAST_UPDATED_DATE_DE=$(date -d "$LAST_UPDATED_DATE" +%d.%m.%Y)
           for file in docs/*.md; do
             filename=$(basename -- "$file")
             name="${filename%.*}" # Extract file name without extension
             cp "$file" "temp/${name}_temp.md"
             
+            # Map title2 to subtitle for PDF rendering
+            sed -i "s/^title2:/subtitle:/" "temp/${name}_temp.md"
+            
             # Replace date placeholder in Markdown content
             if grep -qi '^template:[[:space:]]*dtfb' "$file"; then
-              sed -i "s/{{ site.time | date: \"%d-%m-%Y\" }}/$CURRENT_MONTH_YEAR/g" "temp/${name}_temp.md"
-              sed -i "s/date: {{ site.time | date: \"%d-%m-%Y\" }}/date: $CURRENT_MONTH_YEAR/g" "temp/${name}_temp.md"
-              sed -i "s/^date: .*/date: $CURRENT_MONTH_YEAR/" "temp/${name}_temp.md"
+              sed -i "s/{{ site.time | date: \"%d-%m-%Y\" }}/$LAST_UPDATED_DATE_DE/g" "temp/${name}_temp.md"
+              sed -i "s/{{ site.time | date: '%d.%m.%Y' }}/$LAST_UPDATED_DATE_DE/g" "temp/${name}_temp.md"
+              sed -i "s/date: {{ site.time | date: \"%d-%m-%Y\" }}/date: $LAST_UPDATED_DATE_DE/g" "temp/${name}_temp.md"
+              sed -i "s/date: {{ site.time | date: '%d.%m.%Y' }}/date: $LAST_UPDATED_DATE_DE/g" "temp/${name}_temp.md"
+              sed -i "s/^date: .*/date: $LAST_UPDATED_DATE_DE/" "temp/${name}_temp.md"
             else
               sed -i "s/{{ site.time | date: \"%d-%m-%Y\" }}/$LAST_UPDATED_DATE/g" "temp/${name}_temp.md"
               sed -i "s/date: {{ site.time | date: \"%d-%m-%Y\" }}/date: $LAST_UPDATED_DATE/g" "temp/${name}_temp.md"
